--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
@@ -32,38 +32,38 @@
 
                     <div style="margin-bottom: 50px;">
                         <label>Name</label>
-                        <input asp-for="Name" class="form-control" type="text" name="Name" />
+                        <input asp-for="Name" required class="form-control" type="text" name="Name" />
                     </div>
 
                     <div style="margin-bottom: 50px;">
                         <label> Company Name</label>
-                        <input asp-for="companyName" class="form-control" type="text" />
+                        <input asp-for="companyName" required class="form-control" type="text" />
                     </div>
 
                     <div style="margin-bottom: 50px;">
                         <label>Name System</label>
-                        <input asp-for="NameSystem" class="form-control" type="text" />
+                        <input asp-for="NameSystem" required class="form-control" type="text" />
                     </div>
 
                     <div style="margin-bottom: 50px;">
                         <label>Descriptions</label>
-                        <textarea asp-for="description" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea asp-for="description" required class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
 
                     <div style="margin-bottom: 50px;">
                         <label>Cost</label>
-                        <input asp-for="Price" class="form-control" />
+                        <input asp-for="Price" required class="form-control" />
                     </div>
 
                     <h1>Aussen & Innen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
                     <div id="Aussen_Innen_ProfilDopel">
 
                         <div id="AussenProfilDopel">
-                            <input type="number" class="form-control" placeholder="Aussen" id="aus" step="0.01" name="aussen" />
+                            <input type="number" class="form-control" required placeholder="Aussen" id="aus" step="0.01" name="aussen" />
                         </div>
 
                         <div id="InnenProfilDopel">
-                            <input type="number" class="form-control" placeholder="innen" id="inter" step="0.01" name="innen" />
+                            <input type="number" class="form-control" required placeholder="innen" id="inter" step="0.01" name="innen" />
                         </div>
                     </div>
                     <div id="productOptions">
