--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
@@ -33,22 +33,22 @@
 
                     <div style="margin-bottom: 50px;">
                         <label>Name</label>
-                        <input asp-for="Name" class="form-control" type="text" name="Name" />
+                        <input asp-for="Name" required class="form-control" type="text" name="Name" />
                     </div>
 
                     <div style="margin-bottom: 50px;">
                         <label> Company Name</label>
-                        <input asp-for="companyName" class="form-control" type="text" />
+                        <input asp-for="companyName" required class="form-control" type="text" />
                     </div>
 
                     <div style="margin-bottom: 50px;">
                         <label>Name System</label>
-                        <input asp-for="NameSystem" class="form-control" type="text" />
+                        <input asp-for="NameSystem" required class="form-control" type="text" />
                     </div>
 
                     <div style="margin-bottom: 50px;">
                         <label>Descriptions</label>
-                        <textarea asp-for="description" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea asp-for="description" required class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
 
                     <div style="margin-bottom: 50px;">
@@ -59,11 +59,11 @@
                     <div id="Aussen_Innen_ProfilDopel">
 
                         <div id="AussenProfilDopel">
-                            <input type="number" placeholder="Size" class="form-control" step="0.01" name="aussen" />
+                            <input type="number" placeholder="Size" required class="form-control" step="0.01" name="aussen" />
                             
                         </div>
                         <div id="costedSize">
-                            <input type="number" placeholder="CostSize" class="form-control" step="0.01" name="costSize" />
+                            <input type="number" placeholder="CostSize" required class="form-control" step="0.01" name="costSize" />
                         </div>
                     </div>
                     <div id="productOptions">
